added flood and bellator projects, added upcoming project preview, fixed horizontal graphic bug in gallery, added tags colors editing, modified header background and description

--- a/_blocks/contact.html
+++ b/_blocks/contact.html
@@ -14,7 +14,7 @@ In case the standard templates don't suffice, you can still use raw HTML (with l
 {% endcomment %}
 
 <p class="col-lg-8 col-lg-offset-2">
-	You have any question or want to contact me? That's fine!<br/> Send me an email or a message on LinkedIn and I'll get back to you as soon as possible!
+	Any question or would like to contact me? That's fine!<br/> Send me an e-mail or a message on LinkedIn and I'll get back to you as soon as possible!
 <p>
 
 {% assign colcount = 0 %}
